--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -4,4 +4,18 @@ body
     color:indigo;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+}
+#container
+{
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 1px solid rgb(1, 8, 75);
+    margin: 0 auto;
+}
+#container h1
+{
+    font-size: 20px;
+
 }
