--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -1,15 +1,28 @@
 body
 {
     background-color: aquamarine;
-    color:indigo;
+    color:rgb(41, 14, 59);
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
+    margin: 5px;
+    padding: 0;
 }
+
+#cabecera
+{
+    background-color: rgb(4, 163, 155);
+    color:rgb(235, 228, 243);
+    margin: 0;
+    padding: 0.5em;
+    font-weight: bold;
+    font-size: 20px;
+}
+
 #container
 {
-    width: 70%;
-    padding: 1em;
+    width: 80%;
+    padding: 3px;
     text-align: left;
     border: 1px solid rgb(1, 8, 75);
     margin: 0 auto;
